2005-07-13  Shakti Sen <shprasad@novell.com>

	* exchange-operations.c: Checked for if the exchange account
	exist/configured.
	* exchange-folder-permission.c: Replaced all the occurences of function
	exchange_config_listener_get_accounts() with
	exchange_operations_get_exchange_account() and returns if it doesn't 
	exist. Also took care to avoid some compile time warnings.
	* exchange-folder.c: Same. Also took care to avoid some compile time
	warnings.
	* exchange-folder-subscription.c: Included 
	exchange-folder-subscription.h file to avoid compilation warning.

	Fixes bug #310233.

2005-07-13  Praveen Kumar <kpraveen@novell.com>

	* org-gnome-exchange-operations.eplug.in : Modified the eplug file to 
	add the "commit" code for folder hierarchy plugins for calendar and 
	contacts
	
2005-07-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	* exchange-operations.c (exchange_operations_report_error) : Check that
	the result is not a success and only then print the error
	* exchange-account-setup.c (btn_chpass_clicked) : Call the error 
	reporting routine only if there is a failure.
	* exchange-config-listener.c (account_added) : Similar

2005-07-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	Patch submitted by ArunPrakash <arunp@novell.com>
	* exchange-operations.c (exchange_operations_report_error) : Newly 
	added, to report errors using e_error_run. Also a list of error-ids is 
	added.
	* exchange-config-listener.c (account_added) (account_removed) :
	Modified the usage of e_notice to e_error_run. Also the error from
	exchange_account_connect is reported using 
	exchange_operations_report_error.
	* exchange-account-setup.c (btn_chpass_clicked) 
	(org_gnome_exchange_settings) (print_error) (set_oof_info): Changed to 
	use exchange_operations_report_error and e_error_run functions.
	* org-gnome-exchange-operations.error.xml : Newly added, defines
	the list of error messages used in the plugin.
	* Makefile.am : Modified for org-gnome-exchange-operations.error.xml
